# loci

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
docs/: banner.py
shell/: loci.zsh
src/loci/: __init__.py  agent.py  cli.py  client.py  config.py  onboard.py
tests/: test_cli.py  test_version.py
