[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loci"
dynamic = ["version"]          # single source of truth: loci.__version__
description = "The genius of the place — an ambient AI agent you summon from your shell with //"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Matthew Williamson" }]
keywords = ["cli", "agent", "anthropic", "claude", "zsh", "okf"]

# Minimal by design: the standard library plus the official Anthropic SDK.
dependencies = ["anthropic>=0.40"]

[project.urls]
Homepage = "https://github.com/vajramatt/loci"
Source = "https://github.com/vajramatt/loci"
Author = "https://crossinginto.ai"

[project.scripts]
loci = "loci.cli:main"

[tool.setuptools.dynamic]
version = { attr = "loci.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
